--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,9 @@ script: ./r-seurat-scripts-post-install-tests.sh
 cache:
   directories:
       - $HOME/miniconda
-      - post_install_tests/test_data
+      - post_install_tests
 
 before_cache:
     - if ! [[ $TRAVIS_TAG ]]; then rm -rf $HOME/miniconda/conda-bld; fi
+    - rm -rf post_install_tests/outputs
     - rm -rf $HOME/miniconda/locks $HOME/miniconda/pkgs $HOME/miniconda/var $HOME/miniconda/conda-meta/history
