--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
     - source activate test-environment
 
 before_script:
-    - export PATH=`pwd`:PATH
+    - export PATH=`pwd`:$PATH
 
 script: ./r-seurat-scripts-post-install-tests.sh
 
