--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
       conda config --add channels conda-forge;
       conda config --add channels bioconda;
 
-      conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION r-base r-optparse libpng r-cairo r-workflowscriptscommon r-seurat;
+      conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION libgfortran r-base r-optparse libpng r-cairo r-workflowscriptscommon r-seurat;
     fi
 
 install:
