--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
       conda config --add channels conda-forge;
       conda config --add channels bioconda;
 
-      conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION r-base=3.5.1 r-optparse libpng r-cairo r-workflowscriptscommon r-seurat=2.3.4;
+      conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION libpng r-cairo r-workflowscriptscommon r-seurat=2.3.4;
     fi
 
 install:
