--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
       conda config --add channels conda-forge;
       conda config --add channels bioconda;
 
-      conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION r-base=3.6.1 r-optparse libpng r-cairo r-workflowscriptscommon r-seurat=3.1.0;
+      conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION r-optparse libpng r-cairo r-workflowscriptscommon r-seurat=3.1.0 r-loom bioconductor-scater;
     fi
 
 install:
