--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -37,5 +37,5 @@ jobs:
           conda install bats r-optparse libpng r-cairo r-workflowscriptscommon r-seurat=3.1.1 r-loom bioconductor-scater;
 
       - name: Run tests
-        runt: |
+        run: |
           ./r-seurat-scripts-post-install-tests.sh
