Avoid quota for installing from github

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -29,7 +29,7 @@ jobs:
           path: ~/conda_pkgs_dir
           key:
             ${{ matrix.os }}-conda-${{ env.CACHE_NUMBER }}-${{hashFiles('test-environment.yml') }}
-      
+
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: test
@@ -40,7 +40,9 @@ jobs:
           channel-priority: flexible
           show-channel-urls: true
           use-only-tar-bz2: true
-      
+
       - name: Run tests
+        env:
+          GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: |
           r-seurat-scripts-post-install-tests.sh
