Improvements select integration features for Galaxy

--- a/cli-generated/manually_crafted_YAML/seurat-select-integration-features.yaml
+++ b/cli-generated/manually_crafted_YAML/seurat-select-integration-features.yaml
@@ -84,4 +84,6 @@ commands:
       var_name: features
     - long: file-out
       type: file_out
+      format: rdata
+      human_readable: Rdata file with features
       call_alias: file
