Pin r-uwot to 0.1.10 and try Seurat 4.0.5

--- a/test-environment.yml
+++ b/test-environment.yml
@@ -5,7 +5,8 @@ dependencies:
   - libpng
   - r-cairo
   - r-workflowscriptscommon
-  - r-seurat=4.0.0
+  - r-seurat=4.0.5
+  - r-uwot <0.1.11
   - r-loom
   - bioconductor-scater
   - r-seuratdisk
