--- a/test-environment.yml
+++ b/test-environment.yml
@@ -5,8 +5,8 @@ dependencies:
   - libpng
   - r-cairo
   - r-workflowscriptscommon
-  - r-seurat=4.0.5
-  - r-uwot <0.1.11
+  - r-seurat=4.0.6
+  - r-uwot
   - r-loom
   - bioconductor-scater
   - r-seuratdisk
