--- a/cli-generated/manually_crafted_YAML/seurat-plot.yaml
+++ b/cli-generated/manually_crafted_YAML/seurat-plot.yaml
@@ -43,7 +43,134 @@ commands:
   - call_carousel: Plot
     long: plot-type
     default: FeaturePlot
+    help: Either FeaturePlot, RidgePlot, DimPlot or
     selector:
+    - call: DimPlot
+      dependencies:
+        - Seurat
+        - ggplot2
+        - patchwork
+      options:
+      - long: object
+        type: internal
+        var_name: seurab_object
+      - long: dims
+        default: "1,2"
+        optional: true
+        type: list
+        help: Dimensions to plot, must be a two-length numeric vector specifying x- and
+          y-dimensions
+      - long: cells
+        default: 'NULL'
+        optional: true
+        type: list
+        help: Vector of cells to plot (default is all cells)
+      - long: cols
+        default: 'NULL'
+        optional: true
+        type: list
+        help: Vector of colors, each color corresponds to an identity class. This may also
+          be a single character or numeric value corresponding to a palette as specified
+          by brewer.pal.info. By default, ggplot2 assigns colors. We also
+          include a number of palettes from the pals package. See 'DiscretePalette' for
+          details.
+      - long: pt.size
+        default: 'NULL'
+        optional: true
+        type: integer
+        help: Adjust point size for plotting
+      - long: reduction
+        default: 'NULL'
+        optional: true
+        type: string
+        help: Which dimensionality reduction to use. If not specified, first searches for
+          umap, then tsne, then pca
+      - long: group.by
+        default: 'NULL'
+        optional: true
+        type: list
+        help: Name of one or more metadata columns to group (color) cells by (for example,
+          orig.ident); pass 'ident' to group by identity class
+      - long: split.by
+        default: 'NULL'
+        type: string
+        optional: true
+        help: Name of a metadata column to split plot by; see 'FetchData' for
+          more details
+      - long: shape.by
+        default: 'NULL'
+        optional: true
+        type: string
+        help: If NULL, all points are circles (default). You can specify any cell attribute
+          (that can be pulled with FetchData) allowing for both different colors and different
+          shapes on cells.  Only applicable if raster is FALSE.
+      - long: order
+        default: 'NULL'
+        type: list
+        optional: true
+        help: Specify the order of plotting for the idents. This can be useful for crowded
+          plots if points of interest are being buried. Provide either a full list of valid
+          idents or a subset to be plotted last (on top)
+      - long: shuffle
+        default: no
+        type: boolean
+        help: Whether to randomly shuffle the order of points. This can be useful for crowded
+          plots if points of interest are being buried. (default is FALSE)
+      - long: seed
+        default: 1
+        type: integer
+        help: Sets the seed if randomly shuffling the order of points.
+      - long: label
+        default: no
+        type: boolean
+        help: Whether to label the clusters
+      - long: label.size
+        default: 4
+        type: integer
+        help: Sets size of labels
+      - long: label.color
+        default: black
+        type: string
+        help: Sets the color of the label text
+      - long: label.box
+        default: no
+        type: boolean
+        help: Whether to put a box around the label text (geom_text vs geom_label)
+      - long: repel
+        default: no
+        type: boolean
+        help: Repel labels
+      - long: cells.highlight
+        default: 'NULL'
+        type: list
+        optional: true
+        help: A list of character or numeric vectors of cells to highlight. If only one
+          group of cells desired, can simply pass a vector instead of a list. If set, colors
+          selected cells to the color(s) in  'cols.highlight'  and other cells black
+          (white if dark.theme = TRUE); will also resize to the size(s) passed to 'sizes.highlight'.
+      - long: cols.highlight
+        default: '#DE2D26'
+        type: list
+        optional: true
+        help: A vector of colors to highlight the cells as; will repeat to the length groups
+          in cells.highlight. Comma separated.
+      - long: sizes.highlight
+        default: 1
+        type: integer
+        optional: true
+        help: Size of highlighted cells; will repeat to the length groups in cells.highlight
+      - long: na.value
+        default: grey50
+        type: string
+        optional: true
+        help: Color value for NA points when using custom scale
+      - long: ncol
+        default: 'NULL'
+        optional: true
+        type: integer
+        help: Number of columns for display when combining plots
+      output:
+        - var_name: plot_object
     - call: RidgePlot
       dependencies:
         - Seurat
@@ -60,11 +187,13 @@ commands:
           retreived by FetchData)
       - long: cols
         default: 'NULL'
+        type: list
         optional: true
-        help: Colors to use for plotting
+        help: Colors to use for plotting, comma separated
       - long: idents
         default: 'NULL'
         optional: true
+        type: list
         help: Which classes to include in the plot (default is all)
       - long: sort
         default: no
@@ -74,14 +203,17 @@ commands:
       - long: assay
         default: 'NULL'
         optional: true
+        type: string
         help: Name of assay to use, defaults to the active assay
       - long: group.by
         default: 'NULL'
         optional: true
+        type: list
         help: Group (color) cells in different ways (for example, orig.ident)
       - long: y.max
         default: 'NULL'
         optional: true
+        type: double
         help: Maximum y axis value
       - long: same.y.lims
         default: no
@@ -94,6 +226,7 @@ commands:
       - long: ncol
         default: 'NULL'
         optional: true
+        type: integer
         help: Number of columns if multiple plots are displayed
       - long: slot
         default: data
@@ -104,11 +237,6 @@ commands:
         default: no
         type: boolean
         help: Horizontally stack plots for each feature
-      - long: combine
-        default: yes
-        type: boolean
-        help: Combine plots into a single  list(list("patchwork"), "ed")  ggplot object.
-          If  list("FALSE") , return a list of ggplot
       - long: fill.by
         default: feature
         type: string
@@ -127,10 +255,10 @@ commands:
         var_name: seurab_object
       - long: features
         type: list
-        help: Vector of features to plot. Features can come from: an assay feature (e.g. a gene name - MS4A1), a
+        help: "Vector of features to plot. Features can come from: an assay feature (e.g. a gene name - MS4A1), a
           column name from meta.data (e.g. mitochondrial percentage - percent.mito),
           a column name from a DimReduc object corresponding
-          to the cell embedding values (e.g. the PC 1 scores - PC_1).
+          to the cell embedding values (e.g. the PC 1 scores - PC_1)."
       - long: dims
         default: "1,2"
         type: list
@@ -138,9 +266,9 @@ commands:
           y-dimensions
       - long: cells
         default: 'NULL'
+        type: list
         help: Vector of cells to plot (default is all cells)
       - long: cols
-        default: if
         optional: true
         type: list
         help: The two colors to form the gradient over. Provide as string vector with the
@@ -180,30 +308,32 @@ commands:
       - long: split.by
         default: 'NULL'
         optional: true
+        type: string
         help: A factor in object metadata to split the feature plot by, pass ident to
           split by cell identity; similar to the old FeatureHeatmap.
       - long: keep.scale
         default: feature
         type: string
         options:
-          - feature: By row/feature scaling: The plots
+          - feature: "By row/feature scaling: The plots
               for each individual feature are scaled to the maximum
               expression of the feature across the conditions provided
-              to 'split.by'.
-          - all: Universal scaling: The plots for all features and
+              to 'split.by'."
+          - all: "Universal scaling: The plots for all features and
               conditions are scaled to the maximum expression value for
-              the feature with the highest overall expression.
-          - NULL: No scaling: Each individual plot is scaled to the
+              the feature with the highest overall expression."
+          - NULL: "No scaling: Each individual plot is scaled to the
               maximum expression value of the feature in the condition
               provided to 'split.by'. Be aware setting NULL will result
-              in color scales that are not comparable between plots.
+              in color scales that are not comparable between plots."
         help: How to handle the color scale across multiple plots.
       - long: shape.by
         default: 'NULL'
         optional: true
+        type: string
         help: If NULL, all points are circles (default). You can specify any cell attribute
           (that can be pulled with FetchData) allowing for both different colors and different
-          shapes on cells.  Only applicable if  list("raster = FALSE") .
+          shapes on cells.  Only applicable if 'raster' is FALSE) .
       - long: slot
         default: data
         optional: true
@@ -237,6 +367,7 @@ commands:
       - long: ncol
         default: 'NULL'
         optional: true
+        type: integer
         help: Number of columns to combine multiple feature plots to, ignored if split.by is
           not NULL
       - long: coord.fixed
@@ -250,15 +381,6 @@ commands:
         optional: true
         help: If splitting by a factor, plot the splits per column with the features as
           rows; ignored if blend = TRUE.
-      - long: sort.cell
-        default: 'NULL'
-        optional: true
-        help: Redundant with 'order'. This argument is being deprecated. Please
-          use 'order' instead.
-      - long: raster
-        default: 'NULL'
-        help: Convert points to raster format, default is 'NULL'  which automatically
-          rasterizes if plotting more than 100,000 cells
       output:
         - var_name: plot_object
     - call: VlnPlot
@@ -277,7 +399,7 @@ commands:
           retreived by FetchData)
       - long: cols
         default: 'NULL'
-        help: Colors to use for plotting
+        help: Colors to use for plotting, comma separated.
         type: list
         optional: true
       - long: pt.size
@@ -303,7 +425,7 @@ commands:
       - long: group.by
         default: 'NULL'
         optional: true
-        type: string
+        type: list
         help: Group (color) cells in different ways (for example, orig.ident)
       - long: split.by
         default: 'NULL'
@@ -318,7 +440,7 @@ commands:
       - long: y.max
         default: 'NULL'
         optional: true
-        type: float
+        type: double
         help: Maximum y axis value
       - long: same.y.lims
         default: no
@@ -415,7 +537,7 @@ commands:
       - long: group.by
         default: 'NULL'
         optional: true
-        type: string
+        type: list
         help: Factor to group the cells by
       - long: split.by
         default: 'NULL'
@@ -431,7 +553,7 @@ commands:
       - long: scale
         default: yes
         type: boolean
-        help: Determine whether the data is scaled, TRUE for default
+        help: Determine whether the data is scaled, will be done by default
       - long: scale.by
         default: radius
         optional: true
@@ -443,17 +565,19 @@ commands:
       - long: scale.min
         default: NA
         optional: true
-        type: float
+        type: double
         help: Set lower limit for scaling, use NA for default
       - long: scale.max
         default: NA
         optional: true
-        type: float
+        type: double
         help: Set upper limit for scaling, use NA for default
       output:
         - var_name: plot_object
   - call: if_for_RDS
-    rcode: if (!is.null(opt$output_rds_file)) {
+    rcode: |
+
+      if (!is.null(opt$output_rds_file)) {
   - call: saveRDS
     options:
       - long: output-rds-file
@@ -466,7 +590,9 @@ commands:
         type: internal
         var_name: plot_object
   - call: close_if_for_RDS
-    rcode: }
+    rcode: |
+      }
+
   - call: ggsave
     dependencies:
       - ggplot2
@@ -478,9 +604,10 @@ commands:
     - long: plot
       type: internal
       var_name: plot_object
-    - long: plot_format
+    - long: plot-format
       call_alias: device
       default: png
+      type: string
       options:
         - png: PNG
         - eps: EPS
@@ -490,17 +617,21 @@ commands:
         - jpeg: JPEG
         - tiff: TIFF
         - svg: SVG
-      help: Format to use
-    - long: scale
+      help: Format to use, either PNG, EPS, PostScript, TeX, PDF, JPEG, TIFF or SVG
+    - long: scale-factor
+      call_alias: scale
       default: 1
-      type: integer
+      type: double
       optional: true
       help: Multiplicative scaling factor.
     - long: width
-      type: float
+      type: double
       default: 10
+      help: Width of the figure, in the selected units.
     - long: height
+      type: double
       default: 10
+      help: Height of the figure, in the selected units.
     - long: units
       default: cm
       options:
@@ -513,8 +644,8 @@ commands:
     - long: dpi
       default: 300
       type: string
-      help: Plot resolution. Also accepts a string input: retina (320), print (300),
-        or screen (72). Applies only to raster output types.
+      help: "Plot resolution. Also accepts a string input: retina (320), print (300),
+        or screen (72). Applies only to raster output types."
     - long: limitsize
       default: yes
       type: boolean
@@ -523,5 +654,6 @@ commands:
         in pixels.
     - long: bg
       default: 'NULL'
+      type: string
       help: Background colour. If NULL, uses the plot.background fill
         value from the plot theme.
