Fix HoverLocator for tests

--- a/cli-generated/manually_crafted_YAML/seurat-hover-locator.yaml
+++ b/cli-generated/manually_crafted_YAML/seurat-hover-locator.yaml
@@ -17,6 +17,8 @@ commands:
     - call: 'readRDS'
       dependencies:
         - ggplot2
+        - optparse
+        - workflowscriptscommon
       options:
         - long: plot-rds
           call_alias: file
