Adjust testing to only use workflowscripts commons from conda

--- a/test-environment.yml
+++ b/test-environment.yml
@@ -4,7 +4,7 @@ dependencies:
   - r-optparse
   - libpng
   - r-cairo
-  - r-workflowscriptscommon
+  - r-workflowscriptscommon >=0.0.8
   - r-seurat=4.0.0
   - r-uwot <0.1.11
   - r-loom
