Try mambaforge variant

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -35,6 +35,7 @@ jobs:
           activate-environment: test
           environment-file: test-environment.yml
           mamba-version: "*"
+          miniforge-variant: Mambaforge
           python-version: 3.6
           channels: conda-forge,bioconda,defaults
           allow-softlinks: true
