--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -34,6 +34,8 @@ jobs:
         with:
           activate-environment: test
           environment-file: test-environment.yml
+          use-mamba: true
+          miniforge-version: latest
           mamba-version: "*"
           miniforge-variant: Mambaforge
           python-version: 3.6
