Move to seurat 3.2.3 (#23)
* Expose perplexity

* Avoids completely deprecated dim.1 and dim.2 in dim-plot

* Dimplot removes or ammend var changes.

* Revert "Tidy up tSNE tests"

This reverts commit 18949ca9f49d2855f5691a82436c7baeb111c499.

* Revert "Expose perplexity"

This reverts commit fe25f04479d777e1442dc37c3cebd0d8770400f2.

* Use seurat 3.1.5 in test env

* Missing argument for perplexity

* Fixes tests

* Adds integration

* Data for transfer test

* Split object WIP

* Move to Seurat 3.2.3

* Fix unfeasible boundary

* Missing comma

* Seurat 3 convert

* Seurat convert tests

* Depend on workflowscriptscommon repo until we have a release there.

* Missing remotes for tests

* Missing github PAT

* Fix loom file naming inconsistency

* Update default parameter values Seurat 3 (#30)

* Update default parameter values

* Fix parameter flags in test scripts

* Turn new default true to negation flags

Co-authored-by: Pablo Moreno <pablo.a.moreno@gmail.com>

* Remove old flags in fvg and use manual seurat-convert script.

* Convert YAML

* Bump version to trigger tests

* Adjust testing to use workflowscriptscommon from conda

* Use mamba and mambaforge

Co-authored-by: Andrey Solovyev <a.solovyev39@gmail.com>

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -29,18 +29,24 @@ jobs:
           path: ~/conda_pkgs_dir
           key:
             ${{ matrix.os }}-conda-${{ env.CACHE_NUMBER }}-${{hashFiles('test-environment.yml') }}
-      
+
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: test
           environment-file: test-environment.yml
+          mamba-version: "*"
+          miniforge-variant: Mambaforge
+          use-mamba: true
+          miniforge-version: latest
           python-version: 3.6
           channels: conda-forge,bioconda,defaults
           allow-softlinks: true
           channel-priority: flexible
           show-channel-urls: true
           use-only-tar-bz2: true
-      
+
       - name: Run tests
+        env:
+          GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: |
           r-seurat-scripts-post-install-tests.sh
