--- a/test-environment.yml
+++ b/test-environment.yml
@@ -1,10 +1,16 @@
 name: test
 dependencies:
-  - bats 
-  - r-optparse 
-  - libpng 
-  - r-cairo 
-  - r-workflowscriptscommon 
-  - r-seurat=3.1.1 
-  - r-loom 
+  - bats
+  - r-optparse
+  - libpng
+  - r-cairo
+  - r-seurat =3.2.3
+  - r-base >=4.0.0,<4.1
+  - r-matrix <=1.3_2
+  - r-spatstat <=1.64_1
+  - r-spatstat.data <=1.64_1
+  - r-spatstat.utils <=1.64_1
+  - r-workflowscriptscommon >=0.0.8
+  - r-loom
   - bioconductor-scater
+  - r-remotes
